# model-tracking

./: .gitignore  CMakeLists.txt
calibration/: CTestTestfile.cmake  Makefile  calibrate-camera  calibrate-hand-eye  camera.xml  cmake_install.cmake  default-chessboard.cfg
docker/: Dockerfile  compose.yml
examples/: CMakeLists.txt  main.cpp
examples/camera/: CMakeLists.txt  main.cpp
examples/test/: CMakeLists.txt
src/: CMakeLists.txt
src/camera/: BaseCamera.h  Camera.cpp  Camera.h
